ADD img to html

--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
     <title>Viaggio a Londra</title>
 </head>
 <body>
+
     <header>
-        <h1>Viaggio a Londra</h1>
+        <h1>Il mio Viaggio a Londra</h1>
+        <img src="./img-header/img-1.jpg" alt="">
+        <img src="./img-header/img-2.jpg" alt="">
+        <img src="./img-header/img-3.jpg" alt="">
         <hr>
     </header>
-    <main>   
+
+    <main>
+        <h2>Le mie spese</h2>
+        <table>
+            
+        </table>   
     </main>    
 </body>
 </html>
