--- a/index.html
+++ b/index.html
@@ -65,15 +65,63 @@
         <!--Lista delle cose fatte-->
         <div>
             <h3>Cose da fare</h3>
-            <ul>
-                <li>Visitare la Tower of London &cross;</li>
-                <li>Visitare greenwich &check;</li>
-                <li>Ascoltare un artista di strada a Covent Garden &check;</li>
-                <li>Mangiare il tipico Fish and Chips inglese &cross;</li>
-            </ul>
+                <ul>
+                    <li>Visitare la Tower of London &cross;</li>
+                    <li>Visitare greenwich &check;</li>
+                    <li>Ascoltare un artista di strada a Covent Garden &check;</li>
+                    <li>Mangiare il tipico Fish and Chips inglese &cross;</li>
+                </ul>
         </div>
 
         <hr>
+
+        <!--Info-->
+        <div>
+          <h3>Info utili:</h3> 
+            <!--Num. emergenze--> 
+            <ol>
+                <li>
+                    Numeri utili di emergenza
+                        <ul>
+                            <li>
+                                <strong>999</strong> - Emergenza
+                            </li>
+                            <li>
+                                <strong>101</strong> - Numero polizia
+                            </li>
+                            <li>
+                                <strong>111</strong> - Numero assistenza medica
+                            </li>
+                        </ul>
+                </li>
+                <!--nome hotel e indirizzo-->
+                <li>
+                    Hotel
+                        <ul>
+                            <li>
+                                <strong>Nome hotel:</strong> Buckingham Palace
+                            </li>
+                            <li>
+                                <strong>Indirizzo hotel</strong> Westminster, London SWIA IAA, Regno Unito
+                            </li>
+                        </ul>
+                    </li>
+                <!--Info del volo di aero-->
+                <li>
+                    Aero
+                        <ul>
+                            <li>
+                                <strong>Volo di Andata:</strong> Y1234X, ore 9:30 da Milano Malpensa
+                            </li>
+                            <li>
+                                <strong>Volo di Ritorno</strong> Y1234X, ore 18:30 da London Heathrow
+                            </li>
+                        </ul>
+                    
+                </li>
+          </ol>
+
+        </div>
 
 
 
