--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <!--Titolo e immagini principali-->
     <header>
         <h1>Il mio Viaggio a Londra</h1>
-        <img src="./img-header/img-1.jpg" alt="">
-        <img src="./img-header/img-2.jpg" alt="">
-        <img src="./img-header/img-3.jpg" alt="">
+        <img src="./img/img-1.jpg" alt="">
+        <img src="./img/img-2.jpg" alt="">
+        <img src="./img/img-3.jpg" alt="">
         <hr>
     </header>
 
@@ -81,7 +81,7 @@
             <!--Num. emergenze--> 
             <ol>
                 <li>
-                    Numeri utili di emergenza
+                    <p>Numeri utili di emergenza</p>
                         <ul>
                             <li>
                                 <strong>999</strong> - Emergenza
@@ -96,7 +96,7 @@
                 </li>
                 <!--nome hotel e indirizzo-->
                 <li>
-                    Hotel
+                    <p>Hotel</p>
                         <ul>
                             <li>
                                 <strong>Nome hotel:</strong> Buckingham Palace
@@ -108,7 +108,7 @@
                     </li>
                 <!--Info del volo di aero-->
                 <li>
-                    Aero
+                    <p>Aero</p>
                         <ul>
                             <li>
                                 <strong>Volo di Andata:</strong> Y1234X, ore 9:30 da Milano Malpensa
